# skminer-amd

./: .gitignore  Miner.sln  Miner.vcxproj  Miner.vcxproj.filters  README.md  SKminer.sln  SKminer.vcxproj  SKminer.vcxproj.filters  miner.conf  test_750ti.bat
resources/config/: miner.conf
resources/kernel/: sk1024_nobody.cl
source/: Makefile.am  configure.ac
source/app/: Application.cpp  Application.h  main.h
source/compute/: CLDevice.cpp  CLDevice.h  CLFuncs.h
source/connections/: SKServerConnection.cpp  SKServerConnection.h  ServerConnection.cpp  ServerConnection.h
source/data/: MinerData.cpp  MinerData.h  SKMinerData.cpp
source/driver/: ADL.cpp  ADL.h  ADLFuncs.h
source/gpu/: ADLGPU.cpp  ADLGPU.h
source/jansson/: hashtable_seed.c  jansson_config.h
source/kernel/: KernelFuncs.cpp  KernelFuncs.h
source/threads/: MinerThread.cpp  MinerThread.h  SKMinerThread.cpp
source/zcore/: CBlock.cpp  CBlock.h  Connection.cpp  Miner.cpp  Miner.h  Outbound.cpp  Packet.cpp
